fix: 修复集合初始化方法错误